--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Outfit:wght@100..900&family=Young+Serif&display=swap" rel="stylesheet">
-    <link rel="icon" href="images/LOGO.png">
+    <link rel="icon" href="./images/LOGO.png">
 </head>
 <body>
     <div id="main-container">
         <div id="dropdown">
-            <img src="images/LOGO.png" alt="Logo" width="100%" height="100%" id="logo-icon">
+            <img src="./images/LOGO.png" alt="Logo" width="100%" height="100%" id="logo-icon">
         </div>
         <div id="icon-menu">
             <div id="harmbarger">
-                <img src="images/Humburger-Menu.png" alt="harmburger menu icon" width="50%" height="50%" id="harmburger-icon">
+                <img src="./images/Humburger-Menu.png" alt="harmburger menu icon" width="50%" height="50%" id="harmburger-icon">
             </div>
             <div id="nav">
                 <ul id="navlist">
@@ -32,32 +32,32 @@
 <h2 id="we">We offer:</h2>
 <div id="big">
     <div id="slots" class="boxes">
-        <img src="/images/food delivery.jpg" alt="food delivery" width="100%" id="image">
+        <img src="./images/food delivery.jpg" alt="food delivery" width="100%" id="image">
         <p id="text-1"> food delivery.</p>
     </div>
     <div id="slots" class="boxes">
-        <img src="/images/web dev services.jpg" alt="web development" width="100%" id="image">
+        <img src="./images/web dev services.jpg" alt="web development" width="100%" id="image">
         <p> Web development services.</p>
     </div>
 </div>
 <div id="big">
     <div id="slots" class="boxes">
-        <img src="/images/online marketing.jpg" alt="online marketing" width="100%" id="image">
+        <img src="./images/online marketing.jpg" alt="online marketing" width="100%" id="image">
         <p> Online marketing of products.</p>
     </div>
     <div id="slots" class="boxes">
-        <img src="/images/Investment research.jpg" alt="investments" width="100%" id="image">
+        <img src="./images/Investment research.jpg" alt="investments" width="100%" id="image">
         <p> Research on investments for individuals.</p>
     </div>
 </div>
 <h2 id="we">We also sell:</h2>
 <div id="big">
     <div id="slots" class="boxes">
-        <img src="/images/computing devices.jpg" alt="computing devices" width="100%" id="image">
+        <img src="./images/computing devices.jpg" alt="computing devices" width="100%" id="image">
         <p> Computing devices</p>
     </div>
     <div id="slots" class="boxes"> 
-        <img src="/images/vehicles selling.jpg" alt="vehicles" width="100%" id="image">
+        <img src="./images/vehicles selling.jpg" alt="vehicles" width="100%" id="image">
         <p> Vehicles.</p>
     </div>
 </div>
@@ -65,11 +65,11 @@
 <h3>General products like:</h3>
 <div id="big">
     <div id="slots" class="boxes">
-        <img src="/images/retailer goods.jpg" alt="Retailer goods" width="100%" id="image">
+        <img src="./images/retailer goods.jpg" alt="Retailer goods" width="100%" id="image">
         <p> *Retailer good.</p>
     </div>
     <div id="slots" class="boxes">
-        <img src="/images/wholesale goods.jpg" alt="wholesale" width="100%" id="image">
+        <img src="./images/wholesale goods.jpg" alt="wholesale" width="100%" id="image">
         <p> *Wholesaler goods.</p> 
     </div>
 </div>
